--- a/pitchfork_reviews.ipynb
+++ b/pitchfork_reviews.ipynb
@@ -7,7 +7,7 @@
     "In this notebook I am going to do an exploratory analysis on Pitchfork reviews data. The data was taken from Kaggle (https://www.kaggle.com/nolanbconaway/pitchfork-data).\n",
     "The questions that I am trying to answer are: \n",
     "    1. Who has the most rated albums by Pitchfork? \n",
-    "    2. Who has the most reviewed by pitchfork and has a score of 10? \n",
+    "    2. Who is the most reviewed artist by pitchfork and has a score of 10? \n",
     "    3. Which year is the highest rated? \n",
     "    4. Who is the best artist according to Pitchfork? \n",
     "    5. What is the Pitchfork's genre selection over the years? \n",
