--- a/pitchfork_reviews.ipynb
+++ b/pitchfork_reviews.ipynb
@@ -450,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2. Who has the most reviewed by pitchfork and has a score of 10?**"
+    "**2. Who is the most reviewed artist by pitchfork and has a score of 10?**"
    ]
   },
   {
